[package]
name = "blog_editor"
version = "0.1.0"
edition = "2021"
description = "Your personal assistant to create well-structured blog posts"
license = "MIT"
repository = "https://github.com/schultyy/blog_editor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.4", features = ["derive"] }
dialoguer = "0.9.0"